@@ -1,3 +1,8 @@
+2005-01-25  Nobuo Yamashita  <nobsun@sampou.org>
+
+	* src/kahua-spvr.scm (handle-spvr-command):
+	added version command to show kahua version.
+
 2005-01-18  Nobuo Yamashita  <nobsun@sampou.org>
 
 	* src/kahua-spvr.scm, src/kahua-keyserv.scm, cgi/kahua.cgi.in:
